Fix T87631: Crash undoing edit-mode bone duplication

Edit mode could leave pose channels in the object that didn't
have an associated bone.

These are now cleared when freeing edit-mode data.